minor sidebar update to prevent menu overflow on mobile device sizes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,3 +3,12 @@
   width: 100%;
   align-items: stretch;
 }
+
+.fullnav {
+  width: 100%;
+}
+
+.hiddencontent {
+  display: none;
+  transition: all 0.3s;
+}
